<?xml version="1.0"?>
<package format="3">
    <name>livox_ros_driver2</name>
    <version>1.0.0</version>
    <description>The ROS device driver for Livox 3D LiDARs</description>
    <maintainer email="dev@livoxtech.com">feng</maintainer>
    <license>MIT</license>

    <!-- Common ROS 1 / ROS 2 dependencies -->
    <build_depend>ros_environment</build_depend>

    <!-- ROS2 dependencies -->
    <buildtool_depend >ament_cmake_auto</buildtool_depend>
    <build_depend >rosidl_default_generators</build_depend>
    <member_of_group >rosidl_interface_packages</member_of_group>
    <depend >rclcpp</depend>
    <depend >rclcpp_components</depend>
    <depend >rcl_interfaces</depend>
    <depend >rcutils</depend>
    <exec_depend >rosbag2</exec_depend>
    <exec_depend >rosidl_default_runtime</exec_depend>
    <test_depend >ament_lint_auto</test_depend>
    <test_depend >ament_lint_common</test_depend>

    <!-- ROS1/2 dependencies -->
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>git</depend>
    <depend>apr</depend>

    <export>
        <build_type >ament_cmake</build_type>
    </export>
</package>
